# dual-ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.py  install_simple.py  pyproject.toml  requirements.txt  setup.py  uninstall.py
config/: config.example.yaml  config.yaml
docs/: configuration.md  installation.md  troubleshooting.md  usage.md
examples/: advanced_config.yaml  basic_usage.py
scripts/: build_release.py  check_deps.py  setup_apis.py
src/dual_ai/: __init__.py  ai_wrapper.py  config.py  interface.py  main.py  orchestrator.py  utils.py
tests/: __init__.py  test_integration.py  test_interface.py  test_orchestrator.py
